--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
         "paths": {
             "@components/*": ["components/*"],
             "@styles/*": ["styles/*"],
-            "@links/*": ["links/*"]
+            "@links/*": ["links/*"],
+            "@data/*": ["data/*"],
+            "@interfaces/*": ["interfaces/*"]
         }
     },
     "exclude": ["node_modules"],
