--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "array-sort": "^1.0.0",
     "autoprefixer": "^10.2.3",
     "framer-motion": "^3.2.2-rc.1",
+    "moment": "^2.29.1",
     "next": "latest",
     "postcss": "^8.2.4",
     "react": "^16.12.0",
@@ -19,6 +21,7 @@
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
+    "@types/array-sort": "^1.0.0",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
