--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "with-typescript",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "type-check": "tsc"
-  },
-  "dependencies": {
-    "array-sort": "^1.0.0",
-    "autoprefixer": "^10.2.3",
-    "framer-motion": "^3.2.2-rc.1",
-    "moment": "^2.29.1",
-    "next": "latest",
-    "postcss": "^8.2.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-icons": "^4.1.0",
-    "sass": "^1.32.5",
-    "tailwindcss": "^2.0.2"
-  },
-  "devDependencies": {
-    "@types/array-sort": "^1.0.0",
-    "@types/node": "^12.12.21",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "typescript": "4.0"
-  },
-  "license": "MIT"
+    "name": "with-typescript",
+    "version": "1.0.0",
+    "scripts": {
+        "dev": "next",
+        "build": "next build",
+        "start": "next start",
+        "type-check": "tsc",
+        "deploy": "git pull && npm i && npm run build && next start -p 8666"
+    },
+    "dependencies": {
+        "array-sort": "^1.0.0",
+        "autoprefixer": "^10.2.3",
+        "framer-motion": "^3.2.2-rc.1",
+        "moment": "^2.29.1",
+        "next": "latest",
+        "postcss": "^8.2.4",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-icons": "^4.1.0",
+        "sass": "^1.32.5",
+        "tailwindcss": "^2.0.2"
+    },
+    "devDependencies": {
+        "@types/array-sort": "^1.0.0",
+        "@types/node": "^12.12.21",
+        "@types/react": "^16.9.16",
+        "@types/react-dom": "^16.9.4",
+        "typescript": "4.0"
+    },
+    "license": "MIT"
 }
