--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     },
     "dependencies": {
         "array-sort": "^1.0.0",
-        "autoprefixer": "^10.2.3",
-        "framer-motion": "^3.2.2-rc.1",
+        "autoprefixer": "^10.3.1",
+        "framer-motion": "^4.1.17",
         "moment": "^2.29.1",
         "next": "latest",
-        "postcss": "^8.2.4",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
-        "react-icons": "^4.1.0",
-        "sass": "^1.32.5",
-        "tailwindcss": "^2.0.2"
+        "postcss": "^8.3.6",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-icons": "^4.2.0",
+        "sass": "^1.37.5",
+        "tailwindcss": "^2.2.7"
     },
     "devDependencies": {
         "@types/array-sort": "^1.0.0",
-        "@types/node": "^12.12.21",
-        "@types/react": "^16.9.16",
-        "@types/react-dom": "^16.9.4",
-        "typescript": "4.0"
+        "@types/node": "^16.6.0",
+        "@types/react": "^17.0.17",
+        "@types/react-dom": "^17.0.9",
+        "typescript": "4.3"
     },
     "license": "MIT"
 }
