--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     },
     "dependencies": {
         "array-sort": "^1.0.0",
-        "autoprefixer": "^10.3.7",
-        "framer-motion": "^4.1.17",
-        "moment": "^2.29.1",
-        "next": "latest",
-        "postcss": "^8.3.9",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-icons": "^4.3.1",
-        "sass": "^1.43.2",
-        "tailwindcss": "^2.2.19"
+        "autoprefixer": "^10.4.7",
+        "framer-motion": "^6.5.1",
+        "moment": "^2.29.4",
+        "next": "^12.2.3",
+        "postcss": "^8.4.14",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.4.0",
+        "sass": "^1.54.0",
+        "tailwindcss": "^3.1.6"
     },
     "devDependencies": {
         "@types/array-sort": "^1.0.0",
-        "@types/node": "^16.10.9",
-        "@types/react": "^17.0.30",
-        "@types/react-dom": "^17.0.9",
-        "typescript": "4.4"
+        "@types/node": "^18.6.2",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
+        "typescript": "4.7"
     },
     "license": "MIT"
 }
